--- a/src/agro/BuscarPlanificacionva.form
+++ b/src/agro/BuscarPlanificacionva.form
@@ -58,10 +58,7 @@
                   <Component id="cbobuscar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <Component id="jScrollPane1" min="-2" pref="484" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-              </Group>
+              <Component id="jScrollPane1" alignment="0" pref="900" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -97,16 +94,40 @@
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="4">
-                    <Column editable="true" title="id" type="java.lang.Object"/>
-                    <Column editable="true" title="Cod_Planificacion" type="java.lang.Object"/>
-                    <Column editable="false" title="Cod_Vacuna" type="java.lang.Object"/>
-                    <Column editable="true" title="Nombre" type="java.lang.Object"/>
+                  <Table columnCount="8" rowCount="4">
+                    <Column editable="true" title="ID" type="java.lang.Object"/>
+                    <Column editable="false" title="COD_PLANV" type="java.lang.Object"/>
+                    <Column editable="false" title="COD_ETAPAV" type="java.lang.Object"/>
+                    <Column editable="true" title="ETAPA_DESCRI" type="java.lang.Object"/>
+                    <Column editable="false" title="ANIMAL_ID" type="java.lang.Object"/>
+                    <Column editable="true" title="NOMBRE_ANIMAL" type="java.lang.Object"/>
+                    <Column editable="false" title="COD_VACUNA" type="java.lang.Object"/>
+                    <Column editable="true" title="NOMBRE_VACUNA" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="1" minWidth="2" prefWidth="1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="3" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="3" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="3" resizable="true">
                       <Title/>
                       <Editor/>
                       <Renderer/>
