--- a/src/Reportes/reporteanimal.jrxml
+++ b/src/Reportes/reporteanimal.jrxml
@@ -16,8 +16,7 @@ left join razas r
 on a.razaid = r.id
 left join categorias c 
 on a.categoriaid = c.id
-where a.razaid = $P!{p_raza}
-or a.categoriaid =$P!{p_categoria}]]>
+where a.razaid = $P!{p_raza}]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
