--- a/src/Reportes/pedidosnroped.jrxml
+++ b/src/Reportes/pedidosnroped.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="pedidosnroped" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a386d01e-b3fa-43d0-9060-8ce357357608">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="pedidosnroped" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a386d01e-b3fa-43d0-9060-8ce357357608">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -16,8 +16,8 @@ inner join productos p
 on dp.productosid = p.id 
 inner join pedidos p2 
 on dp.pedidosid = p2.id 
-where p2.nropedido like $P{p_nro}
-and dp.productosid like $P{p_productos}]]>
+where p2.nropedido = $P{p_nro}
+and dp.productosid= $P!{p_productos}]]>
 	</queryString>
 	<field name="pedidosid" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
